--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -20,6 +20,17 @@
         "doc",
         "ideas"
       ]
+    },
+    {
+      "login": "lwleo02",
+      "name": "lwleo02",
+      "avatar_url": "https://avatars.githubusercontent.com/u/86616877?v=4",
+      "profile": "https://github.com/lwleo02",
+      "contributions": [
+        "code",
+        "doc",
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 7
