--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -31,6 +31,17 @@
         "doc",
         "ideas"
       ]
+    },
+    {
+      "login": "Kai411",
+      "name": "kaii411",
+      "avatar_url": "https://avatars.githubusercontent.com/u/51218403?v=4",
+      "profile": "https://github.com/Kai411",
+      "contributions": [
+        "code",
+        "doc",
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 7
